<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_starter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.codelabs.moviestage.StarterActivity"
    android:background="@drawable/art_poster_collage_3"
    android:tileMode="repeat"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textColor="#FFFFFF"
            android:textSize="30sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#ffbcaf"
            android:layout_margin="5dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#ffbcaf"
            android:layout_margin="35dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_text_one"
            android:layout_margin="5dp"
            android:textColor="#b9f6ca"
            android:textSize="15sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ffbcaf"
            android:layout_margin="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_text_two"
            android:layout_margin="5dp"
            android:textColor="#b9f6ca"
            android:textSize="15sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ffbcaf"
            android:layout_margin="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_text_three"
            android:layout_margin="5dp"
            android:textColor="#b9f6ca"
            android:textSize="15sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ffbcaf"
            android:layout_margin="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_text_four"
            android:layout_margin="5dp"
            android:textColor="#b9f6ca"
            android:textSize="15sp"
            />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_settings_black_24dp"
        android:tint="#0A1E27"
        app:backgroundTint="#05D26E"/>



</android.support.design.widget.CoordinatorLayout>
